test/spec_vectors/memory_fill/fail/module_47.wat
(module (memory 1 1) (func (export "testfn") (memory.fill (i64.const 10) (f32.const 20) (f64.const 30))))